crates/vm/src/snapshots/mu_vm__tests__object_load_named-7.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
v := { a: {} }
print ?v.a.b


# Result (success):
none

# Stdout:
none

