crates/vm/src/snapshots/mu_vm__tests__object_load_named.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
v := {}
print v.a


# Result (error):
[31merror[0m in code: undefined field "a"


# Stdout:

