crates/vm/src/snapshots/mu_vm__tests__precedence-2.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
1 + 2 * 3

# Result (success):
7

# Stdout:

