crates/vm/src/snapshots/mu_vm__tests__precedence.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
3 * 2 + 1

# Result (success):
7

# Stdout:

