crates/vm/src/snapshots/mu_vm__tests__simple-10.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
2 >= 2

# Result (success):
true

# Stdout:

