crates/vm/src/snapshots/mu_vm__tests__simple-12.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
2 <= 2

# Result (success):
true

# Stdout:

