crates/vm/src/snapshots/mu_vm__tests__simple-13.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
true && false

# Func:
function <[[main]]>:
  frame_size: 4
  length: 9
  const: <empty>
  code:
    0 | push_true 
    1 | jump_if_false offset=7
    3 | nop 
    4 | nop 
    5 | nop 
    6 | nop 
    7 | push_false 
    8 | suspend 


# Result (success):
false

# Stdout:

