crates/vm/src/snapshots/mu_vm__tests__simple-14.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
true || false

# Result (success):
true

# Stdout:

