crates/vm/src/snapshots/mu_vm__tests__simple-16.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
2 ?? none

# Result (success):
2

# Stdout:

